--- a/service.html
+++ b/service.html
@@ -195,7 +195,14 @@
       </div>
     </section>
 
-  
+    <section class="call-to-action">
+      <div class="call-title">
+        Please contact us if you would like to order a design or for additional information.
+      </div>
+      <div class="call-btn">
+        <a href="contact.html" class="btn btn-secondary" href="#">Contact Us </a>
+      </div>
+    </section>
 
     <footer class="footer-down">
      
