--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <div class="container">
             
 
-            <form class="form ">
+            <form action="https://formsubmit.co/nardidumessa@email.com" class="form " method="POST">
                 <h1>
                     Contact Us
                     <p>
