--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <div class="container">
             
 
-            <form action="https://formsubmit.co/nardidumessa@gmail.com" class="form " method="POST">
+            <form action="https://formsubmit.co/infooelias@gmail.com" class="form " method="POST">
                 <h1>
                     Contact Us
                     <p>
